[Upgrade] to 2019.3 Unity version

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@
 /[Bb]uild/
 /[Bb]uilds/
 /[Ii]gnore/
+/[Ll]ogs/
+
 /[Pp]ackages/[Ii]gnore/
 /Assets/AssetStoreTools*
+.vs/
 
 # Win Standalone Build
 /*_[Dd]ata/
